added nav bar, jumbotron, cards with photos. bio and links in description work.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,108 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
     <title>Fresh to Death</title>
   </head>
-  <body></body>
+
+  <body>
+    <nav>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link disabled"
+            href="#"
+            tabindex="-1"
+            aria-disabled="true"
+            >Disabled</a
+          >
+        </li>
+      </ul>
+    </nav>
+
+    <header>
+      <div class="jumbotron">
+        <h1 class="display-4">If you dream it, it can happen.</h1>
+        <p class="lead">
+          Alina Hernandez is a California based web developer and policy
+          consultant who enjoys creating beautiful safe spaces where folks can
+          feel free to thrive. Follow her on
+          <a
+            href="https://www.linkedin.com/in/alina-hernandez-121b45211/"
+            target="_blank"
+            >LinkedIn</a
+          >, stalk her on
+          <a href="https://github.com/truethatplaya" target="_blank">GitHub</a>,
+          or just say <a href="mailto:alina.hernandez.ca@gmail.com">hello</a>.
+        </p>
+        <hr class="my-4" />
+        <p>put something clever here.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button"
+          >Let's get to it!</a
+        >
+      </div>
+    </header>
+    <section class="projects row justify-content-center">
+      <div class="card" style="width: 18rem">
+        <img
+          src="./assets/images/DailyVibes-screenshot.png"
+          class="card-img-top"
+          alt="screenshot of Daily Vibes Project 1"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="./assets/images/music-quiz-screenshot.png"
+          class="card-img-top"
+          alt="screenshot of Music Quiz"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img
+          src="./assets/images/password-generator-screenshot.png"
+          class="card-img-top"
+          alt="screenshot of a password generator"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
