resume button works and will download a .pdf on click

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
   <body>
     <nav>
       <ul class="nav justify-content-end">
+        <!-- <li class="nav-item">
+          <a class="nav-link active" href="#">About</a>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link" href="#">Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Contact</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link disabled"
             href="#"
             tabindex="-1"
             aria-disabled="true"
-            >Disabled</a
+            >Resume</a
           >
-        </li>
+        </li> -->
       </ul>
     </nav>
 
@@ -43,7 +43,7 @@
         <h1 class="display-4">If you dream it, it can happen.</h1>
         <p class="lead">
           Alina Hernandez is a California based web developer and policy
-          consultant who enjoys creating beautiful safe spaces where folks can
+          consultant who enjoys creating beautiful safe spaces where all can
           feel free to thrive. Follow her on
           <a
             href="https://www.linkedin.com/in/alina-hernandez-121b45211/"
@@ -54,9 +54,12 @@
           or just say <a href="mailto:alina.hernandez.ca@gmail.com">hello</a>.
         </p>
         <hr class="my-4" />
-        <p>put something clever here.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button"
-          >Let's get to it!</a
+        <a
+          class="btn btn-primary btn-lg"
+          href="./assets/images/AJH-minimal-resume-draft.pdf"
+          download
+          role="button"
+          >Resume</a
         >
       </div>
     </header>
@@ -107,5 +110,16 @@
         </div>
       </div>
     </section>
+    <footer>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">@truethatplaya</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">alina.hernandez.ca@gmail.com</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
