updated README with links to updated content.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <footer>
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" href="#">@truethatplaya</a>
+          <a class="nav-link active" href="#">(916) 296-4656</a>
         </li>
 
         <li class="nav-item">
