added links to project buttons

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </p>
         <hr class="my-4" />
         <a
-          class="btn btn-primary btn-lg"
+          class="btn btn-light btn-lg"
           href="./assets/images/AJH-minimal-resume-draft.pdf"
           download
           role="button"
@@ -71,12 +71,13 @@
           alt="screenshot of Daily Vibes Project 1"
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Daily Vibes</h5>
+          <p class="card-text">HTML, CSS, JavaScript</p>
+          <a
+            href="https://truethatplaya.github.io/DailyVibes/"
+            class="btn btn-dark"
+            >Check your Vibes!</a
+          >
         </div>
       </div>
       <div class="card" style="width: 18rem">
@@ -86,12 +87,13 @@
           alt="screenshot of Music Quiz"
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Music Quiz</h5>
+          <p class="card-text">HTML, CSS, JavaScript</p>
+          <a
+            href="https://truethatplaya.github.io/04-code-quiz/"
+            class="btn btn-dark"
+            >Take the Quiz!</a
+          >
         </div>
       </div>
       <div class="card" style="width: 18rem">
@@ -101,12 +103,13 @@
           alt="screenshot of a password generator"
         />
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Password Generator</h5>
+          <p class="card-text">HTML, CSS, JavaScript</p>
+          <a
+            href="https://truethatplaya.github.io/03-javascript-password-generator/"
+            class="btn btn-dark"
+            >Generate a Password!</a
+          >
         </div>
       </div>
     </section>
