added links to works and contact section in the nav bar.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a class="nav-link active" href="#">About</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#">Works</a>
+          <a class="nav-link" href="#worksSection">Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contactSection">Contact</a>
         </li>
         <!-- <li class="nav-item">
           <a
@@ -63,7 +63,7 @@
         >
       </div>
     </header>
-    <section class="projects row justify-content-center">
+    <section id="worksSection" class="works row justify-content-center">
       <div class="card" style="width: 18rem">
         <img
           src="./assets/images/DailyVibes-screenshot.png"
@@ -113,7 +113,7 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer id="contactSection">
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" href="#">(916) 296-4656</a>
