--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./assets/css/style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Monoton&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -15,6 +25,13 @@
   </head>
 
   <body>
+    <div>
+      <img
+        id="headshotAlina"
+        src="./assets/images/Alina_Hernandez _Headshot.jpg"
+        alt="headshot of Alina Hernandez"
+      />
+    </div>
     <nav>
       <ul class="nav justify-content-end">
         <!-- <li class="nav-item">
@@ -40,8 +57,10 @@
 
     <header>
       <div class="jumbotron" style="background-color: bisque">
-        <h1 class="display-4">If you dream it, it can happen.</h1>
-        <p class="lead">
+        <h1 class="display-4" id="heroPitch">
+          If you dream it, it can happen.
+        </h1>
+        <p class="lead" id="shortBio">
           Alina Hernandez is a California based web developer and policy
           consultant who enjoys creating beautiful safe spaces where all can
           feel free to thrive. Follow her on
