changed img size on cards.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="card" style="width: 18rem">
         <img
           src="./assets/images/DailyVibes-screenshot.png"
-          class="card-img-top"
+          class="card-img-top medium"
           alt="screenshot of Daily Vibes Project 1"
         />
         <div class="card-body">
@@ -102,7 +102,7 @@
       <div class="card" style="width: 18rem">
         <img
           src="./assets/images/music-quiz-screenshot.png"
-          class="card-img-top"
+          class="card-img-top medium"
           alt="screenshot of Music Quiz"
         />
         <div class="card-body">
@@ -118,7 +118,7 @@
       <div class="card" style="width: 18rem">
         <img
           src="./assets/images/password-generator-screenshot.png"
-          class="card-img-top"
+          class="card-img-top medium"
           alt="screenshot of a password generator"
         />
         <div class="card-body">
