added new colors to UI. added new color pallete to use for future. created space between projects.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <header>
-      <div class="jumbotron" style="background-color: bisque">
+      <div class="jumbotron" id="heroBackground">
         <h1 class="display-4" id="heroPitch">
           If you dream it, it can happen.
         </h1>
